# Telegram-Bot-MCP

./: .env.example  .gitignore  Dockerfile  README.md  bot_runner.py  client.py  config.py  env.example  middleware.py  pyproject.toml  requirements.txt  simple_telegram_bot_mcp.py  simple_telegram_bot_mcp_v2.py  smithery.yaml  start.py  telegram_bot_mcp_v1.py  webhook_server.py
src/telegram_bot_mcp/: __init__.py  server.py
